# bloch

./: LICENSE  README.md  build_matlab_mex.m  build_python_lib.sh  pyproject.toml
c/: bloch.c  bloch.h
examples/: examples.py
matlab/: bloch.m  bloch_mex.c
python/: bloch.py  bloch_plot.py
tests/: test_bloch.m  test_bloch.py
